# embedded-iot-hub

./: .gitignore  .gitmodules  ENVIRONMENT.md  README.md
beaglebone/controller/tests/unit/: CMakeLists.txt
beaglebone/controller/tests/unit/src/: controller_shim.c  db_manager_shim.c  test_controller_main.c  test_db_transaction.c
beaglebone/server/tests/unit/: CMakeLists.txt
beaglebone/server/tests/unit/src/: test_server_main.c
esp32-hub/: CMakeLists.txt  README
esp32-hub/main/: CMakeLists.txt  aws_manager.c  aws_manager.h  ble_gattc.c  ble_internal.h  ble_light.c  ble_lock.c  ble_manager.c  ble_manager.h  ble_scan.c  build_info.c  config.h  hub_logic.h  main.c  tcp_manager.c  tcp_manager.h  trinity_nvs_idf.c  trinity_private_idf.h  uart_manager.c  uart_manager.h  vroom_bus.c  vroom_bus.h  wifi_manager.c  wifi_manager.h
esp32-hub/main/stubs/: trinity_canary_idf_stub.c  trinity_wdt_idf_stub.c
esp32-hub/tests/unit/: CMakeLists.txt
esp32-hub/tests/unit/src/: test_hub_main.c
esp32c3/idf/motor/main/: CMakeLists.txt  battery.c  battery.h  build_info.c  main.c  main.h  motor_control.c  motor_control.h  tcp_server.c  tcp_server.h  trinity_canary_idf.c  trinity_log.h  trinity_panic_idf.c  trinity_stats_idf.c  trinity_wdt_idf.c  wifi.c  wifi.h  wifi_tx_sweep.c  wifi_tx_sweep.h
esp32c3/idf/motor/main/legacy/: trinity_log_idf.c
esp32c3/idf/motor/main/stubs/: trinity_nvs_idf_stub.c  trinity_panic_idf_stub.c  trinity_stats_idf_stub.c
esp32c3/idf/motor/tests/unit/: CMakeLists.txt
esp32c3/zephyr/pir/: CMakeLists.txt  Kconfig  README  prj.conf
esp32c3/zephyr/pir/boards/: bench.conf  esp32c3_devkitm.overlay  esp32c3_devkitm_uart.overlay  esp32c3_devkitm_usb.overlay  usb.conf
esp32c3/zephyr/pir/build_test/: .ninja_deps  .ninja_log  build.ninja  build_info.yml  build_info.yml.bak  compile_commands.json  sysbuild_modules.txt
esp32c3/zephyr/pir/build_test/Kconfig/: Kconfig.modules
esp32c3/zephyr/pir/build_test/zephyr/: edt.pickle  linker_zephyr_pre0.cmd.dep  runners.yaml  zephyr.dts.pre  zephyr.stat
esp32c3/zephyr/pir/src/: ble_adv.c  ble_adv.h  main.c  main.h  max17048.c  max17048.h  trinity_canary_esp.c  trinity_fault_esp.c  trinity_flash_esp.c  trinity_log.h  trinity_nvs_esp.c  trinity_private_esp.h  trinity_stats_esp.c  trinity_wdt_esp.c
esp32c3/zephyr/pir/src/legacy/: trinity_log_zephyr_esp.c
esp32c3/zephyr/pir/src/stubs/: trinity_canary_esp_stub.c  trinity_fault_esp_stub.c  trinity_flash_esp_stub.c  trinity_stats_esp_stub.c
esp32c3/zephyr/pir/tests/unit/: CMakeLists.txt
nrf52840/smart-light/: CMakeLists.txt  README  prj.conf
nrf52840/smart-light/boards/: bench.conf
nrf52840/smart-light/build_test/: .ninja_deps  .ninja_log  build.ninja  build_info.yml  compile_commands.json
nrf52840/smart-light/build_test/Kconfig/: kconfig_module_dirs.env
nrf52840/smart-light/build_test/Kconfig/boards/: Kconfig.defconfig  Kconfig.native_sim  Kconfig.sysbuild
nrf52840/smart-light/build_test/Kconfig/soc/: Kconfig.soc
nrf52840/smart-light/build_test/zephyr/: edt.pickle  linker_zephyr_pre0.cmd.dep  snippets_generated.cmake  zephyr.stat
nrf52840/smart-light/build_test/zephyr/NSI/: nsi_config
nrf52840/smart-light/build_test/zephyr/kconfig/: sources.txt
nrf52840/smart-light/src/: ble_gatt.c  ble_gatt.h  main.c  main.h  trinity_boot.c  trinity_canary.c  trinity_log.h  trinity_stats.c  trinity_wdt.c
nrf52840/smart-light/src/stubs/: trinity_canary_stub.c
nrf52840/smart-light/tests/unit/: CMakeLists.txt
nrf52840/smart-light/tests/unit/src/: test_smart_light_main.c
nrf52840/smart-lock/: CMakeLists.txt  Kconfig.trinity  README  prj.conf
nrf52840/smart-lock/binary_debug/com_base_build/: README  prj.conf  rtt.conf  uart.conf  uart.overlay  usbc.conf
nrf52840/smart-lock/binary_debug/com_base_build/src/: main.c  main.c.bak
nrf52840/smart-lock/binary_debug/rtt_base_build/: prj.conf
nrf52840/smart-lock/binary_debug/rtt_base_build/src/: battery.h  build_info.c
nrf52840/smart-lock/binary_debug/uart_base_build/: prj.conf
nrf52840/smart-lock/binary_debug/usbc_base_build/: CMakeLists.txt  README  prj.conf
nrf52840/smart-lock/binary_debug/wdt_min/: CMakeLists.txt.bak  main_min_wdt.c.bak  prj.conf_wdt_min.bak  trinity_log_zephyr_nrf_min_wdt.c.bak
nrf52840/smart-lock/boards/: field.conf  field.conf.bak  field.overlay  promicro_nrf52840.overlay
nrf52840/smart-lock/build_test/: .ninja_deps  .ninja_log  build.ninja  build_info.yml  compile_commands.json  zephyr_settings.txt
nrf52840/smart-lock/build_test/Kconfig/: kconfig_module_dirs.cmake
nrf52840/smart-lock/build_test/zephyr/: .cmake.dotconfig.checksum  edt.pickle  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  zephyr.stat
nrf52840/smart-lock/src/: battery.c  battery.h  ble_gatt.c  ble_gatt.h  config.h  lock_state.h  main.c  main.h  motor.c  motor.h  trinity_boot.c  trinity_fault.c  trinity_private.h
nrf52840/smart-lock/src/legacy/: trinity_log_zephyr_nrf.c.bak
nrf52840/smart-lock/src/stubs/: trinity_boot_stub.c  trinity_fault_stub.c  trinity_wdt_stub.c
nrf52840/smart-lock/tests/unit/: CMakeLists.txt  prj.conf
stm32-blackpill/: CMakeLists.txt  stm32-blackpill.ioc
stm32-blackpill/Core/Inc/: main.h  stm32f4xx_hal_conf.h
stm32-blackpill/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
stm32-blackpill/User/Core/: blackpill_logic.h  board_compat.h  crash_log.c  crash_log.h  fram_driver.c  fram_driver.h  ili9341.c  ili9341.h  log.c  log.h  parser.c  parser.h  trinity_fault_stm32_f4.c  trinity_fram_stm32_f4.c  trinity_heap_stm32_f4.c  trinity_stack_stm32_f4.c  trinity_wdt_stm32_f4.c  ui.c  ui.h  xpt2046.c  xpt2046.h
stm32-blackpill/User/Core/legacy/: trinity_log_stm32_f4.c
stm32-blackpill/User/Core/stubs/: trinity_fault_stm32_f4_stub.c  trinity_fram_stm32_f4_stub.c  trinity_heap_stm32_f4_stub.c  trinity_stack_stm32_f4_stub.c
stm32-blackpill/cmake/stm32cubemx/: CMakeLists.txt
stm32-blackpill/tests/unit/: CMakeLists.txt
stm32-blackpill/tests/unit/src/: test_blackpill_main.c
stm32-bluepill/tests/unit/: CMakeLists.txt
stm32-bluepill/tests/unit/src/: test_bluepill_main.c
(+104 files in other folders)
